Upgrade to Spring Boot 4.0 snapshots.
See #693